--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,15 @@ cmake_minimum_required(VERSION 3.9)
 project(path_planner)                    
 set(CMAKE_CXX_STANDARD 20)              
 
+find_package(ompl REQUIRED)
+
+
 include_directories(src/planner/)
 include_directories(/usr/include/eigen3/)
-include_directories(/usr/local/include/ompl-1.6/)
+#include_directories(/usr/local/include/ompl-1.6/) 
+include_directories(/opt/ros/humble/include/ompl-1.6/)
+#include_directories(/usr/include/fcl)
+
 add_library(3dPathPlanner SHARED src/planner/planner.cpp )
 
 set( HEADER 
